サブコマンドに移行完了